--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -33,7 +33,7 @@ header {
     display: inline;
     text-align: left;
     cursor: pointer;
-    color: #089B9B;
+    color: #089b9b;
 }
 #carrinho {
     text-align: right;
